syntax = "proto3";

package model;

option go_package = "model/proto";

// java specific options
option java_multiple_files = true;
option java_package = "com.ai.procyon.jenkins.grpc.agent";

message Secret {
  string type = 1;
  File   file = 2;
}

message File {
  uint32 id          = 1;
  string fileName    = 2;
  string fileContent = 3;
}

message GetSecretRequest {
  uint32 id = 1;
}

message GetSecretResponse {
  Secret secret = 1;
}

message ListSecretsRequest {}

message ListSecretsResponse {}